--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -152,7 +152,7 @@
                             </li>
                             <!-- END NOTIFICATION DROPDOWN -->
                                                         <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                            <li class="dropdown dropdown-user dropdown-dark">
+                            <li class="dropdown dropdown-user ">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
                                    data-hover="dropdown" data-close-others="true">
                                     <!--<span class="username username-hide-on-mobile"> Doe </span>-->
