--- a/src/app/toolbar/managephoto/managephotoToolbar.html
+++ b/src/app/toolbar/managephoto/managephotoToolbar.html
@@ -40,7 +40,7 @@
                             <li class="separator hide"></li>
                             <!-- BEGIN NOTIFICATION DROPDOWN -->
                             <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                            <li class="dropdown dropdown-user dropdown-dark">
+                            <li class="dropdown dropdown-user ">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                     <!--<span class="username username-hide-on-mobile"> Doe </span>-->
                                     <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
