--- a/src/app/toolbar/settings/settingsToolbar.html
+++ b/src/app/toolbar/settings/settingsToolbar.html
@@ -40,7 +40,7 @@
 							<li class="separator hide"></li>
 							<!-- BEGIN NOTIFICATION DROPDOWN -->
 							<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-							<li class="dropdown dropdown-extended dropdown-notification dropdown-dark" id="header_notification_bar">
+							<li class="dropdown dropdown-extended dropdown-notification " id="header_notification_bar">
 								<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 									<i class="icon-bell"></i>
 									<span class="badge badge-success"> 7 </span>
