--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -8,6 +8,8 @@
 
 
             <div class="row">
+                <div style="color: red;text-align: center;margin-bottom: 20px">{{message}}</div>
+
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light bordered border-rounded">
