--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -13,7 +13,8 @@
                         <span class="bold">{{item.search_name}}</span>
                         <br/>
                         <br/>
-                        <span><a style="color: red"  ng-click="editSearch(item)">Edit</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                        <span><a style="color: red"  ng-click="editSearch(item)">Edit</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                            <a ng-click="deleteSearch(item.id_search)"
                                 style="color: red">Delete</a></span>
                     </div>
                     <div class="col-md4" style="line-height: 50px;text-align: center">
