--- a/src/app/main/search/searchbyid/searchById.html
+++ b/src/app/main/search/searchbyid/searchById.html
@@ -60,7 +60,7 @@
                             <div class="form-group">
                                 <div class="col-md-offset-10">
                                     <button type="button" class=" btn red input-rounded"
-                                            ng-click="viewById()">
+                                            ng-click="viewById(viewId)">
                                         Search
                                     </button>
                                 </div>
@@ -133,11 +133,11 @@
                                                         <td>:</td>
                                                         <td>{{item.mothertongue}}</td>
                                                     </tr>
-                                                    <tr>
-                                                        <td class="first-row">Community</td>
-                                                        <td>:</td>
-                                                        <td>Vaniyakullak Kshathriya</td>
-                                                    </tr>
+                                                    <!--<tr>-->
+                                                        <!--<td class="first-row">Community</td>-->
+                                                        <!--<td>:</td>-->
+                                                        <!--<td>Vaniyakullak Kshathriya</td>-->
+                                                    <!--</tr>-->
                                                     <tr>
                                                         <td class="first-row">Star</td>
                                                         <td>:</td>
