--- a/src/app/toolbar/search/searchtoolbar.html
+++ b/src/app/toolbar/search/searchtoolbar.html
@@ -81,9 +81,9 @@
 				<div class="main-heading-actions">
 					<ul class="main-tool-link uppercase">
 						<li><a ng-class="{ activetoolbar: isActive('/search')}" ui-sref="search">Regular Search</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/search/advanced')}" ui-sref="search.advanced">Advanced Search</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/search/robo')}" ui-sref="search.robo">Robo Search</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/search/searchbyId')}" ui-sref="search.searchbyId">Search By ID</a></li>
+						<!--<li><a ng-class="{ activetoolbar: isActive('/search/advanced')}" ui-sref="search.advanced">Advanced Search</a></li>-->
+						<!--<li><a ng-class="{ activetoolbar: isActive('/search/robo')}" ui-sref="search.robo">Robo Search</a></li>-->
+						<li><a ng-class="{ activetoolbar: isActive('/search/searchbyId')}" ui-sref="search.searchbyId({id: 1})">Search By ID</a></li>
 					</ul>
 				</div>
 
