--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -38,9 +38,9 @@
 
         <div class="row border-rounded-bottom" style="background-color:white;padding: 9px 14px 9px 9px;">
             <div class="input-group">
-                <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID">
+                <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID" ng-model="viewId">
                                                     <span class="input-group-btn">
-                                                        <button class="btn red input-rounded-pratial-right" type="button">Go</button>
+                                                        <button class="btn red input-rounded-pratial-right" ng-click="viewById(viewId)" type="button">Go</button>
                                                     </span>
             </div>
 
