--- a/src/app/toolbar/searchresults/searchresultstoolbar.html
+++ b/src/app/toolbar/searchresults/searchresultstoolbar.html
@@ -79,7 +79,7 @@
 			<div class="col-md-10">
 				<div class="row">
 					<div class="col-md-12" style="margin-top: 10px">
-						<span style="font-size: 20px;font-weight: 600"> Your Search Results (1824)</span>
+						<span style="font-size: 20px;font-weight: 600"> Your Search Results</span>
 					</div>
 					<div class="col-md-12" style="margin-top: 10px;margin-bottom: 10px">
 						<span>Don't show profiles <input type="checkbox" id="contacted" value="option1"> Already contacted
