--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -283,9 +283,12 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Martial status</span>
+                                            <span class="pull-right refined-search-header">
+                                                <a ng-if="mstatusDiv" ng-click="selectFacet('mstatusDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!mstatusDiv" ng-click="selectFacet('mstatusDiv')"><i class="fa fa-angle-down"></i></a> </span>
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="mstatusDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="mstatus in martialStatus" class="row">
                                                 <div class="col-md-12">
@@ -304,9 +307,13 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">MotherTongue</span>
+                                             <span class="pull-right refined-search-header">
+                                                <a ng-if="motherTongueDiv" ng-click="selectFacet('motherTongueDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!motherTongueDiv" ng-click="selectFacet('motherTongueDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="motherTongueDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.mothertongue | limitTo:mtcount" class="row">
                                                 <div class="col-md-12">
@@ -316,7 +323,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-md-12 margin-bottom-10">
+                                        <div class="col-md-12 margin-bottom-10" ng-hide="motherTongueDiv">
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <span ng-if="populate.mothertongue.length > mtcount" class="show-more-less pull-left" ng-click="showMoreMStatus('mtcount','more')">More</span>
@@ -332,9 +339,13 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Religion</span>
+                                             <span class="pull-right refined-search-header">
+                                                <a ng-if="religionDiv" ng-click="selectFacet('religionDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!religionDiv" ng-click="selectFacet('religionDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="religionDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.religon | limitTo:relcount" class="row">
                                                 <div class="col-md-12">
@@ -360,9 +371,13 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Star</span>
+                                            <span class="pull-right refined-search-header">
+                                                <a ng-if="starDiv" ng-click="selectFacet('starDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!starDiv" ng-click="selectFacet('starDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="starDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.stars | limitTo:starcount" class="row">
                                                 <div class="col-md-12">
@@ -388,10 +403,14 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Education</span>
+                                            <span class="pull-right refined-search-header">
+                                                <a ng-if="eduDiv" ng-click="selectFacet('eduDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!eduDiv" ng-click="selectFacet('eduDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
-                                        <div class="col-md-12 margin-top-10 margin-bottom-10">
+                                    <div class="row refined-search-area" ng-hide="eduDiv">
+                                        <div class="col-md-12 margin-top-10 margin-bottom-10" >
                                             <div ng-repeat="obj in populate.education | limitTo:educount" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
@@ -417,9 +436,13 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Employed In</span>
+                                        <span class="pull-right refined-search-header">
+                                                <a ng-if="empDiv" ng-click="selectFacet('empDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!empDiv" ng-click="selectFacet('empDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="empDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.occupation_category | limitTo:ocuCatcount" class="row">
                                                 <div class="col-md-12">
@@ -433,7 +456,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <span ng-if="populate.occupation_category.length >= ocuCatcount" class="show-more-less pull-left" ng-click="showMoreMStatus('ocuCatcount','more')">More</span>
-                                                    <span ng-if="ocuCatcount != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocuCatcount','less')">Less</span>
+                                                    <span ng-if="occupation_category.length != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocuCatcount','less')">Less</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -445,9 +468,13 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Occupation</span>
+                                        <span class="pull-right refined-search-header">
+                                                <a ng-if="ocuDiv" ng-click="selectFacet('ocuDiv')"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!ocuDiv" ng-click="selectFacet('ocuDiv')"><i class="fa fa-angle-down"></i></a> </span>
+
                                         </div>
                                     </div>
-                                    <div class="row refined-search-area">
+                                    <div class="row refined-search-area" ng-hide="ocuDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.occupation | limitTo:ocucount" class="row">
                                                 <div class="col-md-12">
@@ -468,6 +495,7 @@
                                     </div>
                                 </div>
                             </div>
+
 
 
                         </div>
