--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -74,9 +74,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title">Pending</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                               <!-- <div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -90,9 +90,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title">Accepted</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -106,9 +106,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title">Declined</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -127,9 +127,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title">Sent</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -143,9 +143,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title">A Waiting Reply</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -175,9 +175,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title important-options">Viewd profiles</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -191,9 +191,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title important-options">Ignored members</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -207,9 +207,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title important-options">Declined</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -224,9 +224,9 @@
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
                                                     <span class="title important-options">Blocked members</span>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1 col-xs-1">
+                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
