--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -120,7 +120,7 @@
                                     <div class="col-md-12 margin-top-20" ng-if="messages[messageIndex].field == 'mother_status'">
 
                                         <select class="form-control input-rounded "
-                                                ng-model="mother_status.mother_status">
+                                                ng-model="profileComp.mother_status">
                                             <option value="">Select</option>
                                             <option value="homemaker">Homemaker</option>
                                             <option value="employed">Employed</option>
