--- a/src/app/toolbar/search/searchtoolbar.html
+++ b/src/app/toolbar/search/searchtoolbar.html
@@ -21,7 +21,7 @@
 						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
 						<li><a ui-sref="app">MY HOME</a></li>
 						<li><a ui-sref="matches">MATCHES</a></li>
-						<li><a ui-sref="search">SEARCH</a></li>
+						<li style="background-color: #00c29e"><a ui-sref="search">SEARCH</a></li>
 						<li><a href="#about">DAILY MATCHES</a></li>
 						<li><a ui-sref="messages">MESSAGES</a></li>
 						<li><a ui-sref="#">HELP</a></li>
@@ -74,7 +74,7 @@
 
 			<!-- END PAGE TOP -->
 		</div>
-		<div class="row">
+		<div class="row"  style="background-color: #00c29e">
 			<div class="col-md-1"></div>
 			<div class="col-md-10">
 				<!-- DOC: Remove "hide" class to enable the page header actions -->
