--- a/src/app/main/search/searchbyid/searchById.html
+++ b/src/app/main/search/searchbyid/searchById.html
@@ -72,6 +72,7 @@
 
                 <div class="col-md-12 " ng-if="item != null">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div style="color: red;text-align: center">{{message}}</div>
                     <div class="portlet light bordered border-rounded">
 
 
@@ -168,7 +169,7 @@
                                     </div>
 
                                 </div>
-                                <div class=" row vp-main-action" ng-if="mainlink !='shortlisted'">
+                                <div class=" row vp-main-action">
                                     <div style="text-transform: uppercase;text-align: center;">
                                         <div class="col-md-3 col-sm-3 col-xs-3"
                                              style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer" ng-click="shortlist(item.id_people)"><i
@@ -189,24 +190,7 @@
 
                                     </div>
                                 </div>
-                                <div class=" row vp-main-action" ng-if="mainlink =='shortlisted'">
-                                    <div style="text-transform: uppercase;text-align: center;">
 
-                                        <div class="col-md-4"
-                                             style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
-                                            <i class="fa fa-phone"></i> Call now
-                                        </div>
-                                        <div class="col-md-4"
-                                             style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                                class="fa fa-commenting-o"></i> Chat now
-                                        </div>
-                                        <div class="col-md-4"
-                                             style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                                class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                        </div>
-
-                                    </div>
-                                </div>
 
                             </div>
                         </div>
