--- a/src/app/navigation/dashboard-right/dashBoardRight.html
+++ b/src/app/navigation/dashboard-right/dashBoardRight.html
@@ -109,7 +109,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send interest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
@@ -167,7 +167,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send interest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
@@ -226,7 +226,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send interest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
@@ -283,7 +283,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send interest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
